clean up home page, header, various sections and portfolio posts. Still very much a WORK IN PROGRESS

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 # Site settings
-title: 	Made by Fred
+title: 	Frederik Van Geloven
 email: fred@madebyfred.com
-description: > # this means to ignore newlines until "baseurl:"
-  I'm Frederik Van Geloven and Made by Fred is my personal web site. I'll be honest with you, I should update it more frequently. I'm a little better at keeping up with Twitter, but not by much. If you want to say hi, or have an awesome project for us to work on, you should send me an email. Links to Twitter and email are to the left.
+description: Frederik Van Geloven online resume
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: frederikvg
