--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: 	Frederik Van Geloven
 email: fred@madebyfred.com
 description: Frederik Van Geloven online resume
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://fredvg.github.io" # the base hostname & protocol for your site
 twitter_username: frederikvg
 github_username:  fredvg
 
